Fixed an issue where the text in the overlay would be off-center.

--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ nav ul li a:hover {
 
 .work {
     border-radius: 10px;
+ 
     position: relative;
     overflow: hidden;
 }
@@ -148,11 +149,12 @@ nav ul li a:hover {
 }
 
 .layer {
-    width: 87%;
+    width: 100%;
     height: 0%;
     color: antiquewhite;
     background: linear-gradient(transparent, green);
     border-radius: 10px;
+    overflow: hidden;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -160,7 +162,6 @@ nav ul li a:hover {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 0 40px;
     transition: height 0.5s;
 }
 
